# File-Handling

./: .gitignore  CMakeLists.txt  README.md  main.cpp
UnitTests/: README.md  file_manager_tests.cpp
file_manager_class/: CMakeLists.txt  file_manager.cpp  file_manager.hpp
local_file_class/: CMakeLists.txt  local_file.cpp  local_file.hpp
src/largeFile/fileManagerClass/: CMakeLists.txt  fileManager.cpp  fileManager.hpp
src/large_file/file_manager_class/: CMakeLists.txt  file_manager.cpp  file_manager.hpp
src/smallFile/localFileClass/: CMakeLists.txt  localFile.cpp  localFile.hpp
src/small_file/local_file_class/: local_file.cpp  local_file.hpp
unitTests/largeFile/largeFileTests/: fileManagerTests.cpp
unitTests/smallFile/localFileTests/: localFileTests.cpp
unit_tests/large_file/large_file_tests/: file_manager_tests.cpp
unit_tests/small_file/local_file_tests/: local_file_tests.cpp
